peteq/base/peteq-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: peteq-api
spec:
  selector:
    app: peteq-api
  ports:
  - port: 80 
    name: web
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peteq-api
spec:
  selector:
    matchLabels:
      app: peteq-api
  template:
    metadata:
      labels:
        app: peteq-api
    spec:
      volumes: []
      containers:
      - name: peteq-api
        imagePullPolicy: Always
        image: peteqproj/peteq 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts: []
        ports:
        - containerPort: 8080
