peteq/base/peteq-event-handler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peteq-event-handler-service
spec:
  selector:
    app: peteq-event-handler-service
  ports:
  - port: 80 
    name: web
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peteq-event-handler-service
spec:
  selector:
    matchLabels:
      app: peteq-event-handler-service
  template:
    metadata:
      labels:
        app: peteq-event-handler-service
    spec:
      volumes: []
      containers:
      - name: peteq-event-handler-service
        imagePullPolicy: Always
        args:
          - "start"
          - "event-handler-service"
        image: peteqproj/peteq 
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts: []
        ports:
        - containerPort: 8080
