peteq/base/peteq-rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peteq-rest-api-service
spec:
  selector:
    app: peteq-rest-api-service
  ports:
  - port: 80 
    name: web
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peteq-rest-api-service
spec:
  selector:
    matchLabels:
      app: peteq-rest-api-service
  template:
    metadata:
      labels:
        app: peteq-rest-api-service
    spec:
      volumes: []
      containers:
      - name: peteq-rest-api-service
        imagePullPolicy: Always
        args:
          - "start"
          - "rest-api-service"
        image: peteqproj/peteq 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts: []
        ports:
        - containerPort: 8080
