peteq/base/peteq-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: peteq-ui
spec:
  selector:
    app: peteq-ui
  ports:
  - port: 80
    targetPort: 3030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peteq-ui
spec:
  selector:
    matchLabels:
      app: peteq-ui
  template:
    metadata:
      labels:
        app: peteq-ui
    spec:
      containers:
      - name: peteq-ui
        imagePullPolicy: Always
        image: peteqproj/peteq-ui
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3030
          name: web
